crates/bsql/tests/compile_fail/grant_rejected.rs
fn main() {
    let _ = bsql::query!("GRANT SELECT ON users TO public");
}
